--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,9 @@ h1 {
 	@media (max-width: 650px) {
 		font-size: 5rem;
 	}
+	@media (max-width: 475px) {
+		font-size: 4rem;
+	}
 }
 h2 {
 	font-size: 3rem;
