--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -41,6 +41,12 @@ $tranistion: 300ms cubic-bezier(0.53, -0.06, 0.94, 1.44);
 	}
 }
 
+@mixin media-phone {
+	@media screen and (max-width: 650px) {
+		@content;
+	}
+}
+
 /********************** basic **********************/
 * {
 	margin: 0;
@@ -114,6 +120,11 @@ img {
 .container {
 	width: calc(min(90%, 1140px));
 	margin: auto;
+	@include flex(center, space-between, row);
+
+	@include media-phone() {
+		@include flex(center, space-between, column);
+	}
 }
 
 .btn {
@@ -148,38 +159,7 @@ img {
 	color: #e7e72a;
 }
 
-/********************** nav **********************/
-nav {
-	background-color: #272727;
-	padding: 0.8em;
-	position: fixed;
-	z-index: 5;
-	width: 100%;
-	.container {
-		@include flex(center, space-between, row);
-		ul {
-			@include flex(center, space-between, row);
-			font-size: 1.3rem;
-			li {
-				margin-left: 1.5em;
-				a {
-					@include aEffect(#ffffff);
-				}
-			}
-		}
-
-		@media (max-width: 650px) {
-			@include flex(center, center, column);
-			ul {
-				@include flex(center, center, row);
-				font-size: 1.5rem;
-				li {
-					margin-left: 0.5em;
-				}
-			}
-		}
-	}
-}
+@import "../sass/nav";
 
 /********************** hero **********************/
 .hero {
@@ -191,7 +171,6 @@ nav {
 	.container {
 		height: 30vh;
 		transform: translateY(100%);
-		@include flex(center, space-between, row);
 		@media (max-width: 650px) {
 			@include flex(center, space-between, column);
 		}
@@ -205,7 +184,7 @@ nav {
 				font-weight: 300;
 			}
 			&::after {
-				content: url(images/coding-1294373_1280.png);
+				content: url(../images/coding-1294373_1280.png);
 				opacity: 0.6;
 				position: absolute;
 				top: -22em;
@@ -321,7 +300,6 @@ nav {
 		.container {
 			padding: $padding;
 			padding-top: 5em;
-			@include flex(center, space-between, row);
 			@media (max-width: 768px) {
 				@include flex(center, space-between, column);
 			}
@@ -418,7 +396,6 @@ nav {
 	.container {
 		padding: $padding;
 		position: inherit;
-		@include flex(flex-start, space-between, row);
 		@media (max-width: 1140px) {
 			@include flex(flex-start, space-between, column);
 			padding-top: 0;
@@ -555,8 +532,8 @@ footer {
 	border-radius: 0 10em 0 0;
 	text-align: center;
 	padding-bottom: 0.2em;
+	width: 100%;
 	.container {
-		@include flex(center, space-between, row);
 		height: 20vh;
 		padding: $padding;
 		@media (max-width: 650px) {
