--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,6 @@
 $padding: 0 0 5em;
 $tranistion: 300ms cubic-bezier(0.53, -0.06, 0.94, 1.44);
+$color-green: #2ae73a;
 
 /********************** mixins **********************/
 @mixin flex($flex-align, $flex-justify, $flex-dir) {
@@ -13,7 +14,7 @@ $tranistion: 300ms cubic-bezier(0.53, -0.06, 0.94, 1.44);
 	position: absolute;
 	width: $span-width;
 	height: $span-height;
-	background: linear-gradient(to right, #2e2e2e, #2f8eb6);
+	background: linear-gradient(to right, transparent, $color-green);
 	animation: $span-an-bane 2s linear infinite;
 }
 @mixin aEffect($clr) {
@@ -31,6 +32,7 @@ $tranistion: 300ms cubic-bezier(0.53, -0.06, 0.94, 1.44);
 		background: $clr;
 		z-index: -1;
 		transition: $tranistion;
+		border-radius: 5px;
 	}
 
 	&:hover {
@@ -156,134 +158,11 @@ img {
 .logo {
 	font-size: large;
 	font-weight: bold;
-	color: #e7e72a;
+	color: $color-green;
 }
 
 @import "../sass/nav";
-
-/********************** hero **********************/
-.hero {
-	background-color: #2e2e2e;
-	height: 100vh;
-	border-radius: 0 0 10rem 0;
-	color: #ffffff;
-	overflow: hidden;
-	.container {
-		height: 30vh;
-		transform: translateY(100%);
-		@media (max-width: 650px) {
-			@include flex(center, space-between, column);
-		}
-		.text {
-			position: relative;
-			@media (max-width: 650px) {
-				position: absolute;
-			}
-			span {
-				color: #e7e72a;
-				font-weight: 300;
-			}
-			&::after {
-				content: url(../images/coding-1294373_1280.png);
-				opacity: 0.6;
-				position: absolute;
-				top: -22em;
-				left: 25em;
-				@media (max-width: 650px) {
-					display: none;
-				}
-			}
-		}
-		.socials {
-			@include flex(center, space-between, column);
-			flex: 45%;
-			@media (max-width: 650px) {
-				@include flex(center, space-between, row);
-				margin-top: 50%;
-			}
-			@media (max-width: 450px) {
-				margin-top: 60%;
-			}
-			a {
-				transform: scale(1);
-				transition: $tranistion;
-				& + * {
-					margin-top: 1em;
-					@media (max-width: 650px) {
-						margin-top: 0;
-						margin-left: 1em;
-					}
-				}
-
-				&:hover {
-					transform: scale(1.3);
-				}
-			}
-		}
-		.btn--animation {
-			position: absolute;
-			color: #ffffff;
-			padding: 0.55em;
-			font-size: 1.1rem;
-			margin: 1.5em 0 0 9em;
-			letter-spacing: 2px;
-			text-transform: uppercase;
-			text-decoration: none;
-			cursor: pointer;
-			overflow: hidden;
-			@media (max-width: 650px) {
-				margin: 1.5em 0 0 35%;
-			}
-			&::before {
-				content: "";
-				position: absolute;
-				transition: $tranistion;
-
-				top: 2px;
-				left: 2px;
-				bottom: 2px;
-				width: 50%;
-				background: rgba(255, 255, 255, 0.05);
-			}
-			span:nth-child(1) {
-				@include span(100%, 2px, animate1);
-				top: 0;
-				left: 0;
-			}
-			span:nth-child(2) {
-				@include span(2px, 100%, animate2);
-				top: 0;
-				right: 0;
-				animation-delay: 1s;
-			}
-			span:nth-child(3) {
-				@include span(100%, 2px, animate3);
-				bottom: 0;
-				left: 0;
-			}
-			span:nth-child(4) {
-				@include span(2px, 100%, animate4);
-				top: 0;
-				left: 0;
-				animation-delay: 1s;
-			}
-
-			&:hover {
-				&::before {
-					width: 95.5%;
-				}
-			}
-		}
-		@media (max-width: 1000px) {
-			.text {
-				&::after {
-					top: -35em;
-					left: 10em;
-				}
-			}
-		}
-	}
-}
+@import "../sass/hero";
 
 /********************** about **********************/
 .about {
@@ -386,7 +265,7 @@ img {
 	&::before {
 		content: "";
 		position: absolute;
-		bottom: -2.5em;
+		bottom: 2.5em;
 		left: 0;
 		height: 20em;
 		width: 50%;
@@ -436,7 +315,7 @@ img {
 					margin-top: 1.5em;
 				}
 				.cta {
-					background-color: #e7e72a;
+					background-color: $color-green;
 					padding: 0.5em;
 					border-radius: 0.5em;
 					color: black;
