--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -136,7 +136,7 @@ img {
 	transition: $tranistion;
 	margin-bottom: 0.3rem;
 	&:hover {
-		background: $color-green;
+		opacity: 0.7;
 		color: #ffff;
 	}
 }
@@ -164,254 +164,9 @@ img {
 @import "../sass/nav";
 @import "../sass/hero";
 @import "../sass/about";
-
-/********************** projects **********************/
-.projects {
-	padding: $padding;
-	min-height: 55vh;
-	.container {
-		.btn-nav {
-			@include flex(center, center, row);
-			& > * + * {
-				margin-left: 0.1em;
-			}
-			button {
-				font-size: 1.5rem;
-			}
-		}
-		.filter-container {
-			@include flex(flex-start, flex-start, row);
-			margin-top: 1em;
-			.item {
-				flex: 0 0 32%;
-				margin: 0.5em;
-				.img {
-					box-shadow: -2px -2px 8px;
-					position: relative;
-					overflow: hidden;
-					height: 200px;
-					img {
-						height: 200px;
-						width: 100%;
-						border-bottom: 0.3rem solid #fff;
-						object-fit: cover;
-					}
-					.item-text {
-						position: absolute;
-						height: 100%;
-						width: 100%;
-						padding: 1em;
-					}
-					&:hover {
-						img {
-							opacity: 0.2;
-							border-color: #2f8eb6;
-						}
-						.item-text {
-							transform: translateY(-100%);
-						}
-					}
-				}
-				@media (max-width: 1250px) {
-					flex: 1 0 48%;
-				}
-			}
-		}
-	}
-}
-
-/********************** projects **********************/
-.contact {
-	border-radius: 0 0 0 10em;
-	padding-bottom: 2.5em;
-	background-color: #ffffff;
-	position: inherit;
-
-	&::before {
-		content: "";
-		position: absolute;
-		bottom: 2.5em;
-		left: 0;
-		height: 20em;
-		width: 50%;
-		z-index: -1;
-		background-color: #2e2e2e;
-	}
-	.container {
-		padding: $padding;
-		position: inherit;
-		@media (max-width: 1140px) {
-			@include flex(flex-start, space-between, column);
-			padding-top: 0;
-		}
-		h2 {
-			flex: 100%;
-		}
-		.projects-section {
-			flex: 0 0 60%;
-			@media (max-width: 1140px) {
-				display: none;
-			}
-		}
-		.projects-description {
-			@include flex(baseline, center, row);
-			gap: 5em;
-
-			.projects-sum {
-				background: #2e2e2e;
-				padding: 2em;
-				border-radius: 0.5em;
-			}
-			.projects-section-sm {
-				display: none;
-				@media (max-width: 1140px) {
-					display: block;
-					margin-top: 1em;
-				}
-			}
-			.text {
-				flex: 0 0 50%;
-				margin-top: 2em;
-				text-align: justify;
-				@media (max-width: 650px) {
-					flex: 0 0 100%;
-				}
-				& > * + * {
-					margin-top: 1.5em;
-				}
-				.cta {
-					background-color: $color-green;
-					padding: 0.5em;
-					border-radius: 0.5em;
-					color: black;
-					span {
-						font-style: italic;
-					}
-				}
-				ul {
-					li {
-						font-size: 1.1rem;
-					}
-				}
-			}
-			.contact__form {
-				@media (max-width: 650px) {
-					width: 100%;
-				}
-				form {
-					@include flex(flex-start, center, column);
-					textarea {
-						font-family: inherit;
-						border: 1px solid #2e2e2e;
-						outline: none;
-						padding: 0.5em;
-						width: 100%;
-						&:focus {
-							border: 1px solid #2f8eb6;
-						}
-					}
-					.form-control {
-						position: relative;
-						margin: 20px 0 20px;
-						width: 100%;
-						input {
-							background-color: transparent;
-							border: 0;
-							border-bottom: 1px solid #2e2e2e;
-							display: block;
-							width: 100%;
-							padding: 0.5em 20%;
-							font-size: 1.1rem;
-							transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-						}
-						label {
-							position: absolute;
-							top: 0.5em;
-							left: 0;
-							span {
-								display: inline-block;
-								font-size: 18px;
-								min-width: 5px;
-								transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-							}
-						}
-						:focus {
-							border: 0;
-							border-bottom: 1px solid #2f8eb6;
-							outline: none;
-							padding: 0.5em 0;
-							& + label {
-								span {
-									color: #2f8eb6;
-									transform: translateY(-30px);
-								}
-							}
-						}
-					}
-
-					#submit {
-						font-size: 1.3rem;
-						padding: 0.5em;
-						background-color: #2f8eb6;
-						border: none;
-						border-radius: 0.2em;
-						color: #ffffff;
-						margin-top: 1em;
-						align-self: center;
-						cursor: pointer;
-						&:hover {
-							transform: scaleX(0.95);
-						}
-					}
-				}
-			}
-		}
-	}
-}
-
-footer {
-	display: block;
-	color: #ffffff;
-	background-color: #2e2e2e;
-	border-radius: 0 10em 0 0;
-	text-align: center;
-	padding-bottom: 0.2em;
-	width: 100%;
-	.container {
-		height: 20vh;
-		padding: $padding;
-		@media (max-width: 650px) {
-			@include flex(center, center, row);
-			p {
-				flex: 100%;
-			}
-		}
-		.socials {
-			a {
-				img {
-					transform: scale(0.7);
-					transition: $tranistion;
-					@media (max-width: 650px) {
-						transform: scale(0.4);
-					}
-				}
-
-				&:hover {
-					img {
-						transform: scale(0.6);
-					}
-				}
-			}
-			& > * + * {
-				margin-left: 2em;
-
-				@media (max-width: 650px) {
-					margin-left: 0;
-				}
-			}
-		}
-	}
-}
+@import "../sass/projects";
+@import "../sass/contact";
+@import "../sass/footer";
 
 @keyframes animate1 {
 	0% {
